<resources>
    <string name="app_name">Form Verification</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_field">First field</string>
    <string name="second_field">Second field</string>
    <string name="third_field">Third field</string>
    <string name="forth_field">Forth field</string>
    <string name="last_field">Last field</string>
    <string name="submit">Submit</string>
    <string name="rv_label">Label</string>
</resources>