<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_field"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/second_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_field"
                app:layout_constraintTop_toBottomOf="@id/first_field" />

            <EditText
                android:id="@+id/third_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/third_field"
                app:layout_constraintTop_toBottomOf="@id/second_field" />

            <EditText
                android:id="@+id/forth_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forth_field"
                app:layout_constraintTop_toBottomOf="@id/third_field" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forth_field" />

            <EditText
                android:id="@+id/last_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_field"
                app:layout_constraintTop_toBottomOf="@id/recycler_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>